Fix #2: text not wrapping around images

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -619,12 +619,12 @@ a:active {
 # Alignments
 --------------------------------------------------------------*/
 .alignleft {
-	display: inline;
+	float: left;
 	margin-right: 1.5em;
 }
 
 .alignright {
-	display: inline;
+	float: right;
 	margin-left: 1.5em;
 }
 
@@ -633,6 +633,18 @@ a:active {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+img.alignright {
+	float: right; margin: 0 0 1em 1em; 
+}
+
+img.alignleft {
+	float: left; margin: 0 1em 1em 0; 
+}
+
+img.aligncenter {
+	display: block; margin-left: auto; margin-right: auto; 
 }
 
 /*--------------------------------------------------------------
