--- a/style.css
+++ b/style.css
@@ -532,15 +532,28 @@ a:active {
 # Alignments
 --------------------------------------------------------------*/
 .alignleft {
-  display: inline;
+  float: left;
   margin-right: 1.5em; }
 
 .alignright {
-  display: inline;
+  float: right;
   margin-left: 1.5em; }
 
 .aligncenter {
   clear: both;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+img.alignright {
+  float: right;
+  margin: 0 0 1em 1em; }
+
+img.alignleft {
+  float: left;
+  margin: 0 1em 1em 0; }
+
+img.aligncenter {
   display: block;
   margin-left: auto;
   margin-right: auto; }
